{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 117,
  "lineage": "3491f2fa-6310-6db5-3bdc-d561e8609439",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:043623260061:internet-gateway/igw-04c23980d959ba46d",
            "id": "igw-04c23980d959ba46d",
            "owner_id": "043623260061",
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "StudentTeam",
              "Project": "BiddingExchangeMVP"
            },
            "vpc_id": "vpc-0a43501b99cb2c525"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:043623260061:route-table/rtb-0a83cfcb4b65a51a0",
            "id": "rtb-0a83cfcb4b65a51a0",
            "owner_id": "043623260061",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c23980d959ba46d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "StudentTeam",
              "Project": "BiddingExchangeMVP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43501b99cb2c525"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0628898d8dad5975b",
            "route_table_id": "rtb-0a83cfcb4b65a51a0",
            "subnet_id": "subnet-085d14d561c114e29"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071dad06ba982056f",
            "route_table_id": "rtb-0a83cfcb4b65a51a0",
            "subnet_id": "subnet-05d19a4ce18394d3b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:043623260061:security-group/sg-0f73743af4176670c",
            "description": "Security group for Lambda functions",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f73743af4176670c",
            "ingress": [],
            "name": "lambda-sg",
            "name_prefix": "",
            "owner_id": "043623260061",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "StudentTeam",
              "Project": "BiddingExchangeMVP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43501b99cb2c525"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:043623260061:security-group/sg-0c982e54b4881546e",
            "description": "Security group for Redis",
            "egress": [],
            "id": "sg-0c982e54b4881546e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f73743af4176670c"
                ],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "redis-sg",
            "name_prefix": "",
            "owner_id": "043623260061",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {
              "ManagedBy": "Terraform",
              "Owner": "StudentTeam",
              "Project": "BiddingExchangeMVP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a43501b99cb2c525"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.lambda_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:043623260061:subnet/subnet-085d14d561c114e29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-085d14d561c114e29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043623260061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-1",
              "Owner": "StudentTeam",
              "Project": "BiddingExchangeMVP"
            },
            "vpc_id": "vpc-0a43501b99cb2c525"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:043623260061:subnet/subnet-05d19a4ce18394d3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05d19a4ce18394d3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "043623260061",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-2",
              "Owner": "StudentTeam",
              "Project": "BiddingExchangeMVP"
            },
            "vpc_id": "vpc-0a43501b99cb2c525"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:043623260061:vpc/vpc-0a43501b99cb2c525",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07a4df9b9a3cf94ad",
            "default_route_table_id": "rtb-06887b8f317dd5af6",
            "default_security_group_id": "sg-0b2f8a5e38c9c404f",
            "dhcp_options_id": "dopt-0f34f57229f2584c2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a43501b99cb2c525",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06887b8f317dd5af6",
            "owner_id": "043623260061",
            "tags": {
              "Name": "exchange-vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "exchange-vpc",
              "Owner": "StudentTeam",
              "Project": "BiddingExchangeMVP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}